--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         body { 
     margin: 0; 
     padding: 0; 
-    background-color: #ffbb00;
+    background-color: #111111;
 }
 
 canvas { 
